# adventofcode-2018

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Pipfile  README.md  aoc  build.sh  create.py  package-lock.json  package.json  requirements.txt  run.py  setup.cfg  utils.py
.github/workflows/: main.yml
day-01/input/: anatole.txt  ayc0.txt  ayoub.txt  enizor.txt  gandem.txt  jules.txt  mathieu.txt  remicalixte.txt  ronan.txt  sami.txt  silvestre.txt  sticky-jr.txt  tishwa.txt  wenceslas.txt  youyoun.txt
day-01/part-1/: anatole.go  atauveron.cpp  ayc0.js  ayoub.cpp  badouralix.go  bebert.py  david.py  degemer.py  enizor.rs  evqna.cpp  gandem.go  jon.py  jules.cpp  lithium.cpp  ludoge.py  mathieu.py  quentinverlhac.cpp  remicalixte.rs  ronan.py  sami.c  sami.sh  silvestre.py  sticky-jr.c  sticky-jr.rs  thomas.cpp  thomas.go  thomas.py  tishwa.java  tpxp.rb  wenceslas.py  youyoun.py
day-01/part-2/: anatole.go  atauveron.cpp  ayc0.js  ayoub.cpp  badouralix.go  bebert.py  david.py  degemer.py  enizor.rs  evqna.cpp  gandem.go  jon.py  jules.cpp  lithium.cpp  ludoge.py  mathieu.py  quentinverlhac.cpp  remicalixte.rs  ronan.py  sami.c  sami.sh  silvestre.py  sticky-jr.py  thomas.cpp  thomas.go  thomas.py  tishwa.java  tpxp.rb  wenceslas.py  youyoun.py
day-02/input/: anatole.txt  ayc0.txt  ayoub.txt  bebert.txt  degemer.txt  enizor.txt  evqna.txt  gandem.txt  jules.txt  lithium.txt  mathieu.txt  quentinverlhac.txt  remicalixte.txt  sami.txt  silvestre.txt  sticky-jr.txt  wenceslas.txt
day-02/part-1/: anatole.go  anatole_test.go  atauveron.cpp  ayc0.js  ayoub.cpp  badouralix.c  badouralix.go  bebert.py  david.py  degemer.py  enizor.rs  evqna.cpp  gandem.go  jon.py  jules.cpp  lithium.cpp  ludoge.py  mathieu.py  quentinverlhac.cpp  remicalixte.rs  sami.c  sami.sh  silvestre.py  sticky-jr.c  thomas.py  tishwa.java  tpxp.rb  wenceslas.py  youyoun.py
day-02/part-2/: anatole.go  atauveron.cpp  ayc0.js  ayoub.cpp  badouralix.go  bebert.py  david.py  degemer.py  enizor.rs  evqna.cpp  gandem.go  jon.py  jules.cpp  sami.c  (+12 more)
day-10/: alphabet.txt
runners/: bash.py  c.py  cpp.py  go.py  js.py  python.py  ruby.py  rust.py  wrapper.py
templates/: template.c  template.go  template.js  template.py  template.rb  template.rs  template.sh
tool/: AOC.py  config.py  create.py  discovery.py  model.py  run.py
(+473 files in other folders)
