[package]
name = "advent-of-code-2018"
version = "0.1.0"
authors = []

[dependencies]

[[bin]]
name = "day-01-part-1-remicalixte"
path = "./day-01/part-1/remicalixte.rs"

[[bin]]
name = "day-01-part-2-remicalixte"
path = "./day-01/part-2/remicalixte.rs"

[[bin]]
name = "day-01-part-1-enizor"
path = "./day-01/part-1/enizor.rs"

