[package]
name = "advent-of-code-2018"
version = "0.1.0"
authors = []

[dependencies]

[[bin]]
name = "day-01-part-1-remicalixte"
path = "./day-01/part-1/remicalixte.rs"

[[bin]]
name = "day-01-part-2-remicalixte"
path = "./day-01/part-2/remicalixte.rs"

[[bin]]
name = "day-01-part-1-enizor"
path = "./day-01/part-1/enizor.rs"

[[bin]]
name = "day-01-part-2-enizor"
path = "./day-01/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-enizor"
path = "./day-02/part-1/enizor.rs"

[[bin]]
name = "day-02-part-2-enizor"
path = "./day-02/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-remicalixte"
path = "./day-02/part-1/remicalixte.rs"

[[bin]]
name = "day-02-part-2-remicalixte"
path = "./day-02/part-2/remicalixte.rs"

[[bin]]
name = "day-03-part-1-remicalixte"
path = "./day-03/part-1/remicalixte.rs"

[[bin]]
name = "day-03-part-2-remicalixte"
path = "./day-03/part-2/remicalixte.rs"

[[bin]]
name = "day-03-part-1-enizor"
path = "./day-03/part-1/enizor.rs"

[[bin]]
name = "day-03-part-2-enizor"
path = "./day-03/part-2/enizor.rs"

[[bin]]
name = "day-04-part-1-enizor"
path = "./day-04/part-1/enizor.rs"

[[bin]]
name = "day-04-part-2-enizor"
path = "./day-04/part-2/enizor.rs"

[[bin]]
name = "day-05-part-1-remicalixte"
path = "./day-05/part-1/remicalixte.rs"

[[bin]]
name = "day-05-part-2-remicalixte"
path = "./day-05/part-2/remicalixte.rs"

[[bin]]
name = "day-05-part-1-enizor"
path = "./day-05/part-1/enizor.rs"

[[bin]]
name = "day-05-part-2-enizor"
path = "./day-05/part-2/enizor.rs"

[[bin]]
name = "day-06-part-1-enizor"
path = "./day-06/part-1/enizor.rs"

[[bin]]
name = "day-06-part-2-enizor"
path = "./day-06/part-2/enizor.rs"

[[bin]]
name = "day-07-part-1-enizor"
path = "./day-07/part-1/enizor.rs"

[[bin]]
name = "day-07-part-2-enizor"
path = "./day-07/part-2/enizor.rs"

[[bin]]
name = "day-01-part-1-sticky-jr"
path = "./day-01/part-1/sticky-jr.rs"

